# RMPRO

./: .gitignore  list_signals.py  main.py  pyproject.toml  simple_test.py  test_ir_command.py
agents/alpha/: get_alpha.py
agents/alpha/prompts/: get_alpha_main_prompt.py
agents/device_control_agent/: get_device_control_agent.py
agents/device_control_agent/prompts/: get_prompt.py
agents/device_control_agent/utils/: __init__.py  execute_ir_command_tool.py
agents/tools/: execute_ir_command_tool.py
agents/utils/sessions/: get_session.py
remote_control_tools/: __init__.py  connect_wifi.py  ir_manager.py  learn.py  list.py  main.py  send_by_id.py  send_signal.py  start_learning.py  test.py  test_json.py
tv_led/: tv_led_controller.py
